/*
 * GSC (Global Social Chain), a blockchain fit for mass adoption and
 * a sustainable token economy model, is the decentralized global social
 * chain with highly secure, low latency, and near-zero fee transactional system.
 *
 * gsc-core is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * License GSC-Core is under the GNU General Public License v3. See LICENSE.
 */

syntax = "proto3";

package protocol;


option java_package = "org.gsc.protos"; //Specify the name of the package that generated the Java file
option java_outer_classname = "Discover"; //Specify the class name of the generated Java file
option go_package = "github.com/gscsocial/grpc-gateway/core";

message Endpoint {
  bytes address = 1;
  int32 port = 2;
  bytes nodeId = 3;
}

message PingMessage {
  Endpoint from = 1;
  Endpoint to = 2;
  int32 version = 3;
  int64 timestamp = 4;
}

message PongMessage {
  Endpoint from = 1;
  int32 echo = 2;
  int64 timestamp = 3;
}

message FindNeighbours {
  Endpoint from = 1;
  bytes targetId = 2;
  int64 timestamp = 3;
}

message Neighbours {
  Endpoint from = 1;
  repeated Endpoint neighbours = 2;
  int64 timestamp = 3;
}

message BackupMessage {
  bool flag = 1;
  int32 priority = 2;
}